# FCTv2

./: .gitignore  CMakeLists.txt  FCT.sln  PhysX.cmake  README.md  RenderDocConfig.cap  test.csv  tmp.glsl  update-vcpkg-configs.bat  vcpkg.json
BlockDemo/: App.h  Block.cpp  Block.h  BlockDemo.vcxproj  BlockDemo.vcxproj.filters  BlockFace.h  BlockMesh.cpp  BlockMesh.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Player.cpp  Player.h  World.cpp  World.h  main.cpp  vcpkg.json
FCT/: CMakeLists.txt  FCT.cpp  FCT.vcxproj  FCT.vcxproj.filters  FCTApi.h  headers.h  vcpkg.json
FCT/Context/: Context.h  D3D11_Context.h  DataTypes.h  DrawCall.h  Font.h  FreeType_Font.cpp  GLES_TextureArray.cpp  GLES_TextureArray.h  GL_ConstBuffer.cpp  GL_ConstBuffer.h  GL_Context.cpp  GL_Context.h  GL_ContextShareData.cpp  GL_ContextShareData.h  GL_DrawCall.cpp  GL_DrawCall.h  GL_InputLayout.cpp  GL_InputLayout.h  GL_Material.cpp  GL_Material.h  GL_PixelShader.cpp  GL_PixelShader.h  GL_Texture.cpp  GL_Texture.h  GL_VertexBuffer.cpp  GL_VertexBuffer.h  GL_VertexShader.cpp  GL_VertexShader.h  IPipelineResource.h  InputLayout.h  Matrix.h  Pipeline.cpp  Pipeline.h  PixelShader.cpp  PixelShader.h  RenderTypes.h  ShaderOutput.cpp  ShaderOutput.h  Texture.h  Vertex.h  (+8 more)
FCT/ImageLoader/: FreeImage_ImageLoader.cpp
FCT/MutilThreadBase/: RefCount.h
FCT/Object/: Box.cpp  Box.h  Object.cpp  Object.h
FCT/Physics/: Controller.cpp  Controller.h  FhsyShareData.cpp  FhsyShareData.h  PhysicsSystem.cpp  PhysicsSystem.h  SimulationCallBack.cpp  SimulationCallBack.h
FCT/Runtime/: runtime.cpp  runtime.h
FCT/Shaders/: Basic.vert  InstanceTransform.glsl
FCT/Shapes/: Rectangle.h  Shape.h  Triangle.h
FCT/Text/: Font.h  FreeType_Font.cpp  FreeType_Font.h  TextLayout.cpp  TextLayout.h  TextPipeline.cpp  TextPipeline.h
FCT/Tools/: Timer.cpp  Timer.h
FCT/UI/: CallBackHandler.h  EventHandler.h  FCTKeyCode.h  GLFW_Window.cpp  GLFW_Window.h  GLFW_WindowShareData.cpp  GLFW_WindowShareData.h  Window.h
Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  packages.config  test.cpp  test0.cpp  vcpkg.json
glad/: CMakeLists.txt  glad.c  glad.vcxproj  glad.vcxproj.filters
glad/glad/: glad.h
glad/src/: glad.c
glad/tmp/glad/: glad.h
